--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -9,7 +9,7 @@
                 <th>合計金額</th>
                 <th>開始日</th>
                 <th>終了日</th>
-                <th>予約確定日時</th>
+                <th>予約確定日</th>
             </tr>
         </thead>
 
